Synapsys/TS-Prod/TS-Prod-VNet.tf
resource "azurerm_resource_group" "rg" {
  name     = "${var.resource_group_name}"
  location = "${var.location}"
}

resource "azurerm_virtual_network" "vnet" {
  name                = "${var.vnet_name}"
  location            = "${var.location}"
  address_space       = ["${var.address_space}"]
  resource_group_name = "${azurerm_resource_group.rg.name}"
  dns_servers         = ["${var.dns_server}", "${var.global_dns_server}"]

  tags {
    display_name = "${var.vnet_name}"
  }
}

resource "azurerm_subnet" "stg_subnet" {
  name                 = "${var.stg_subnet_name}"
  virtual_network_name = "${azurerm_virtual_network.vnet.name}"
  resource_group_name  = "${azurerm_resource_group.rg.name}"
  address_prefix       = "${var.stg_subnet_prefix}"
}

resource "azurerm_subnet" "gw_subnet" {
  name                 = "${var.gw_subnet_name}"
  virtual_network_name = "${azurerm_virtual_network.vnet.name}"
  resource_group_name  = "${azurerm_resource_group.rg.name}"
  address_prefix       = "${var.gw_subnet_prefix}"
}
